--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,6 +5,8 @@
 <div th:fragment="head" style="background-color: red">
     <h3><i>Spring tutorial header</i></h3>
 
+    <p th:text="'Welcome, ' + ${loginInfo.username}" />
+
     <form th:action="@{/logout}"  method="post">
         <input type="submit" value="Logout" />
     </form>
